Initialized entity and tables

--- a/server/docker/docker-compose.yml
+++ b/server/docker/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3"
 
 services:
-  jadon-db:
-    container_name: jadon-db
+  db:
+    container_name: test-db
     image: mysql:8.0
     command: --default-authentication-plugin=mysql_native_password
     restart: always
@@ -10,5 +10,6 @@ services:
       MYSQL_ROOT_PASSWORD: password
     volumes:
       - ./data:/var/lib/mysql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "3306:3306"
