--- a/server/pom.xml
+++ b/server/pom.xml
@@ -7,6 +7,7 @@
 	<artifactId>jadon-springboot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<properties>
+		<start-class>com.jadon.bookmanagement.Application</start-class>
 		<testcontainers.version>1.18.3</testcontainers.version>
 	</properties>
 	<dependencyManagement>
@@ -28,6 +29,14 @@
 				<configuration>
 					<source>9</source>
 					<target>9</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>com.jadon.bookmanagement.Application</mainClass>
+					<layout>JAR</layout>
 				</configuration>
 			</plugin>
 		</plugins>
