update container name

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 
 services:
   db:
+    container_name: jadon-interview-test-db
     image: mysql:8.0
     command: --default-authentication-plugin=mysql_native_password
     restart: always
@@ -15,12 +16,13 @@ services:
     networks:
       - test-network
   app:
+    container_name: jadon-interview-test-server
     restart: always
     build:
       dockerfile: Dockerfile
     environment:
       - SPRING_PROFILES_ACTIVE=dev
-      - SPRING_DATASOURCE_URL=jdbc:mysql://db:3306/testdb
+      - SPRING_DATASOURCE_URL=jdbc:mysql://jadon-interview-test-db:3306/testdb
     ports:
       - "8080:8080"
     depends_on:
