--- a/server/src/main/resources/application-dev.properties
+++ b/server/src/main/resources/application-dev.properties
@@ -1,10 +1,9 @@
-spring.datasource.url=jdbc:mysql://db:3308/testdb?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://jadon-interview-test-db:3306/testdb?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
-spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
 server.error.include-message=always
