--- a/client/docker-compose.yml
+++ b/client/docker-compose.yml
@@ -7,4 +7,11 @@ services:
     build:
       dockerfile: Dockerfile
     ports:
-      - "3000:80"
+      - "80:80"
+    networks:
+      - test-network
+
+networks:
+  test-network:
+    external:
+      name: server_test-network
